View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031727 | Open CASCADE | OCCT:Samples | public | 2020-08-21 11:43 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031727: Samples, JNI Sample - JNI DETECTED ERROR on calling OcctJniRenderer.postMessage() | ||||
Description | JNI fails on startup with the following error on Android 7:F/DEBUG: Abort message: 'art/runtime/java_vm_ext.cc:470] JNI DETECTED ERROR IN APPLICATION: the return type of CallObjectMethodV does not match void com.opencascade.jnisample.OcctJniRenderer.postMessage(java.lang.String)' | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31727 has been created by kgv. SHA-1: 843d5f60f26e3c73523e0922c4fd396f5e3e06a4 Detailed log of new commits: Author: kgv Date: Fri Aug 21 11:47:24 2020 +0300 0031727: Samples, JNI Sample - JNI DETECTED ERROR on calling OcctJniRenderer.postMessage() Use CallVoidMethod() instead of CallObjectMethod(). |
|
Patch is ready for review in OCCT branch CR31727. |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2020-08-21 master SHA - 1d99a2baaa614856d8ef8b0a9975af5c3bdf92c6 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-08-21 SHA - 9541102e96ff9ee3aeec6e3e32f20f63b3b38556 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17322.48000000014 / 17160.470000000118 [+0.94%] Products Total CPU difference: 11882.560000000085 / 11820.020000000079 [+0.53%] Windows-64-VC14: OCCT Total CPU difference: 18716.078125 / 18725.125 [-0.05%] Products Total CPU difference: 13242.09375 / 13316.109375 [-0.56%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31727 has been deleted by inv. SHA-1: 843d5f60f26e3c73523e0922c4fd396f5e3e06a4 |
occt: master 4c99a1f8 2020-08-21 08:47:24 Committer: bugmaster Details Diff |
0031727: Samples, JNI Sample - JNI DETECTED ERROR on calling OcctJniRenderer.postMessage() Use CallVoidMethod() instead of CallObjectMethod(). |
Affected Issues 0031727 |
|
mod - samples/java/jniviewer/app/src/main/jni/OcctJni_MsgPrinter.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-08-21 11:43 | kgv | New Issue | |
2020-08-21 11:43 | kgv | Assigned To | => kgv |
2020-08-21 11:45 | git | Note Added: 0093577 | |
2020-08-21 11:45 | kgv | Note Added: 0093578 | |
2020-08-21 11:45 | kgv | Assigned To | kgv => osa |
2020-08-21 11:45 | kgv | Status | new => resolved |
2020-08-21 11:53 | osa | Note Added: 0093580 | |
2020-08-21 11:53 | osa | Assigned To | osa => bugmaster |
2020-08-21 11:53 | osa | Status | resolved => reviewed |
2020-08-22 16:01 | bugmaster | Note Added: 0093595 | |
2020-08-22 16:01 | bugmaster | Status | reviewed => tested |
2020-08-22 16:05 | bugmaster | Test case number | => Not required |
2020-08-22 16:06 | bugmaster | Changeset attached | => occt master 4c99a1f8 |
2020-08-22 16:06 | bugmaster | Status | tested => verified |
2020-08-22 16:06 | bugmaster | Resolution | open => fixed |
2020-08-22 16:12 | git | Note Added: 0093598 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |