0031727: Samples, JNI Sample - JNI DETECTED ERROR on calling OcctJniRenderer.postMessage()

Use CallVoidMethod() instead of CallObjectMethod().